# cmake

./: CMakeLists.txt  go.mod
scripts/: rpm_post_install.sh
